# autoware.off-road

./: .gitignore  README.md  autoware_off_road_report.txt
Demos/CARLA_mining/: CARLA_mining_demo.py  README.md  run_demo.sh
FreeSeg/: README.md  requirements.txt
FreeSeg/Rellis_3D/: README.md
Models/: requirements.txt
Models/data_parsing/: README.md  mask_labeling.py  requirements.txt
Models/data_utils/: augmentations.py  boundary_dists.py  load_data_elevation.py  load_data_freespace_seg.py  load_data_object_seg.py  radial_contour_dists.py
Models/inference/: README.md  auto_speed_infer.py  freespace_contour_infer.py  freespace_seg_infer copy.py  freespace_seg_infer.py  object_seg_infer.py
Models/model_components/: backbone.py  elevation_head.py  elevation_neck.py  elevation_network.py  freespace_contour_head.py  freespace_contour_network.py  freespace_networks.py  freespace_seg_head.py  freespace_seg_network.py  object_seg_head.py  object_seg_network.py  pre_trained_backbone.py  scene_context.py  scene_neck.py  scene_seg_head.py  scene_seg_network.py
Models/training/: README.md  elevation_trainer.py  freespace_contour_trainer.py  freespace_seg_trainer.py  (+5 more)
Modules/GapFollower/: CMakeLists.txt
Modules/GapFollower/include/: gap_follower.hpp
Modules/GapFollower/scripts/: apply_ipm.py  calc_img_to_world.py  debug_ipm.py
Modules/GapFollower/src/: gap_follower.cpp
Modules/GapFollower/test/: image_to_world_transform.yaml  test_gap_follower.cpp
ObjectSeg/: README.md
PathSeg/: README.md
Simulation/: README.md
TerrainHeightMap/: README.md
(+175 files in other folders)
